--- a/chatbotcoba.ipynb
+++ b/chatbotcoba.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2984e6c3-c7ab-4985-80b2-54eed86e2faf",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Masukkan pertanyaan Anda (ketik 'keluar' untuk berhenti):  laptop di bawah 5 juta\n"
+      "Masukkan pertanyaan Anda (ketik 'keluar' untuk berhenti):  laptop kuat untuk ngoding\n"
      ]
     },
     {
@@ -48,17 +48,11 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Rekomendasi: Berikut adalah rekomendasi laptop di bawah 5 juta yang dapat menjadi pilihan tepat untuk Anda:\n",
+      "Rekomendasi: Untuk kegiatan ngoding, saya merekomendasikan laptop ASUS TUF GAMING F15 FX506HC-I535B8T-O11 - Graphite Black. Laptop ini dilengkapi dengan prosesor Intel Core i5-11400H, NVIDIA GeForce RTX 3050, RAM 16GB, dan storage 512GB SSD. Dengan layar 15.6 inci 144Hz, kamu akan mendapatkan performa yang powerful dan visual yang jernih. Selain itu, laptop ini juga memiliki fitur Intelligent Cooling untuk menjaga suhu laptop tetap optimal saat digunakan dalam waktu yang lama. \n",
       "\n",
-      "1. **ASUS VivoBook 15 A516KA-FHD451 - Slate Grey**\n",
-      "   - Harga: Rp4,699,000\n",
-      "   - Spesifikasi: Intel Celeron N4500, Intel UHD Graphics, 4GB RAM, 512GB SSD, layar 15.6 inci FHD, Windows 11, Office Home and Student 2021 included.\n",
-      "   - Link: [ASUS VivoBook 15 A516KA-FHD451](https://www.tokopedia.com/asus/asus-vivobook-15-a516ka-fhd451-slate-grey?extParam=src%3Dshop%26whid%3D2383689)\n",
+      "Link: [ASUS TUF GAMING F15 FX506HC-I535B8T-O11 - Graphite Black](https://www.tokopedia.com/asus/asus-tuf-gaming-f15-fx506hc-i535b8t-o11-graphite-black?extParam=src%3Dshop%26whid%3D2383689)\n",
       "\n",
-      "2. **ASUS VivoBook 15 A516KA-HD4522 - Transparent Silver**\n",
-      "   - Harga: Rp4,599,000\n",
-      "   - Spesifikasi: Intel Celeron N4500, Intel UHD Graphics, 4GB RAM, 256GB SSD, layar 15.6 inci HD, Windows 11, Office Home and Student 2021 included.\n",
-      "   - Link: [ASUS VivoBook 15 A516KA-HD4522](https://www.tokopedia.com/asus/asus-vivobook-15-a516ka-hd4522\n"
+      "Semoga rekomendasi ini sesuai dengan kebutuhan ngoding kamu ya! Jika ada pertanyaan lebih lanjut, jangan ragu untuk bertanya.\n"
      ]
     },
     {
@@ -66,7 +60,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Masukkan pertanyaan Anda (ketik 'keluar' untuk berhenti):  laptop core i3\n"
+      "Masukkan pertanyaan Anda (ketik 'keluar' untuk berhenti):  harganya berapa tuch?\n"
      ]
     },
     {
@@ -74,24 +68,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Rekomendasi: Berdasarkan query pelanggan yang mencari laptop dengan prosesor Core i3, berikut rekomendasi yang sesuai:\n",
-      "1. **ASUS VivoBook A516JAO-VIPS356 - Transparent Silver**\n",
-      "   - Harga: Rp6,699,000\n",
-      "   - Prosesor: Intel Core i3-1005G1\n",
-      "   - RAM: 4GB\n",
-      "   - Storage: 512GB SSD\n",
-      "   - Layar: 15.6 inci FHD\n",
-      "   - Sistem Operasi: Windows 11 Home\n",
-      "   - Link: [Beli di Tokopedia](https://www.tokopedia.com/asus/asus-vivobook-a516jao-vips356-transparent-silver?extParam=src%3Dshop%26whid%3D2383689)\n",
+      "Rekomendasi: Hai! Berikut adalah rekomendasi laptop berdasarkan harga yang sesuai dengan query pelanggan:\n",
       "\n",
-      "2. **ASUS VivoBook 15 A516JAO-FHD3215 RAM 8GB - Slate Grey**\n",
-      "   - Harga: Rp6,399,000\n",
-      "   - Prosesor: Intel Core i3-1005G1\n",
-      "   - RAM: 8GB\n",
-      "   - Storage: 256GB SSD\n",
-      "   - Layar: 15.6 inci FHD\n",
-      "   - Sistem Operasi: Windows 11 Home\n",
-      "   - Link: [Beli di Tokopedia](https://www.tokopedia.com/asus/asus-vivobook-15-a\n"
+      "Jika kamu mencari laptop dengan harga sekitar Rp6-7 juta, ASUS VivoBook A516JAO-VIPS356 - Transparent Silver bisa menjadi pilihan yang bagus. Dengan prosesor Intel Core i3, grafis Intel UHD, RAM 4GB, dan storage 512GB, laptop ini cocok untuk kebutuhan sehari-hari seperti browsing, tugas sekolah, dan streaming.\n",
+      "\n",
+      "Namun, jika kamu memiliki budget sedikit lebih besar sekitar Rp8,5 juta, ASUS VivoBook Ultra 15 K513EA-OLED351 - Indie Black bisa menjadi pilihan yang menarik. Laptop ini dilengkapi dengan layar OLED FHD, prosesor Intel Core i3, RAM 4GB + ADD ON RAM 8GB, dan storage 512GB. Dengan layar OLED yang brilian, laptop ini cocok untuk multimedia dan tugas produktivitas.\n",
+      "\n",
+      "Semoga rekomendasi ini membantu dalam memilih laptop yang sesuai dengan kebutuhan dan budget kamu. Jangan ragu untuk bertanya lebih lanjut jika ada yang perlu kamu klarifikasi ya!\n"
      ]
     },
     {
@@ -99,40 +82,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Masukkan pertanyaan Anda (ketik 'keluar' untuk berhenti):  saya punya banyak uang , butuh laptop gahar untuk gaming , coba rekomendasikan\n"
+      "Masukkan pertanyaan Anda (ketik 'keluar' untuk berhenti):  exit\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Rekomendasi: Berdasarkan kebutuhan gaming yang gahar, saya merekomendasikan laptop ASUS ROG Strix G15 G513RW-R77RG6G-O - Eclipse Gray dengan spesifikasi sebagai berikut:\n",
-      "- Prosesor AMD Ryzen 7 6800H yang powerful\n",
-      "- GPU NVIDIA GeForce RTX 3070 Ti untuk performa gaming yang smooth\n",
-      "- Layar 15.6 inci QHD dengan refresh rate 165Hz untuk visual yang jernih\n",
-      "- Memori 16GB dan storage 1TB SSD untuk kecepatan dan kapasitas penyimpanan yang besar\n",
-      "- Keyboard backlit chiclet dengan per-key RGB untuk tampilan yang stylish\n",
-      "- Wi-Fi 6E untuk koneksi yang stabil\n",
-      "- Battery 90WHrs untuk daya tahan yang baik saat bermain game\n",
-      "\n",
-      "Laptop ini cocok untuk gaming berat dan akan memberikan pengalaman gaming yang memuaskan. Kamu bisa mendapatkan laptop ini dengan harga Rp29,999,000. Jika tertarik, kamu dapat langsung mengunjungi link berikut: [ASUS ROG Strix G15 G513RW-R77RG6G-O - Eclipse Gray](https://www.tokopedia.com/asus/asus-rog-strix-g15-g513rw-r77rg6g-o-eclipse-gray?extParam=src%3Dshop%26whid%3D238\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Masukkan pertanyaan Anda (ketik 'keluar' untuk berhenti):  kakak tau cara buat indomie telor?\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Rekomendasi: Untuk membuat Indomie telur, Anda memerlukan laptop yang dapat membantu Anda menemukan resep dan tutorial memasaknya. Dari produk yang tersedia, saya merekomendasikan ASUS VivoBook A516JAO-VIPS356 - Transparent Silver. Laptop ini cocok untuk browsing resep online dan menonton tutorial memasak dengan layar 15.6 inci FHD yang jernih. Dengan prosesor Intel Core i3-1005G1 dan storage 512GB, Anda dapat dengan lancar menjalankan aplikasi dan menyimpan berbagai resep. Selain itu, keyboard chiclet yang nyaman memudahkan Anda untuk mencatat resep. Semoga rekomendasi ini sesuai dengan kebutuhan Anda!\n"
+      "Terima kasih! Semoga harimu menyenangkan.\n"
      ]
     }
    ],
@@ -269,7 +226,7 @@
     "        # Prepare system prompt\n",
     "        system_prompt = \"\"\"\n",
     "        Kamu adalah asisten AI untuk rekomendasi produk laptop di toko kami. \n",
-    "        Gunakan bahasa santai namun informatif ala . Fokus pada membantu pelanggan \n",
+    "        Gunakan gaya bahasa santai khas penjual Medan, dengan interaksi akrab. Fokus pada membantu pelanggan \n",
     "        menemukan laptop yang sesuai kebutuhan.\n",
     "\n",
     "        Aturan:\n",
@@ -293,7 +250,14 @@
     "                max_tokens=300,\n",
     "                temperature=0.7\n",
     "            )\n",
-    "            return response.choices[0].message.content.strip()\n",
+    "            gpt_response = response.choices[0].message.content.strip()\n",
+    "            \n",
+    "            # perubahan\n",
+    "            self.conversation_history.append({\"role\": \"assistant\", \"content\": gpt_response})\n",
+    "            self._save_history()  # Save updated history to file\n",
+    "            # perubahan END\n",
+    "            \n",
+    "            return gpt_response\n",
     "        \n",
     "        except Exception as e:\n",
     "            return f\"Maaf, terjadi kesalahan dalam pemrosesan: {str(e)}\"\n",
@@ -301,9 +265,12 @@
     "def main():\n",
     "    # Load environment variables\n",
     "    load_dotenv()\n",
-    "    \n",
+    "    openai_api_key = os.getenv('OPENAI_API_KEY')\n",
     "    # Initialize OpenAI client\n",
-    "    openai.api_key = \"YourAPI Here\"\n",
+    "    openai.api_key = openai_api_key\n",
+    "    if not openai_api_key:\n",
+    "        print(\"Silakan atur OPENAI_API_KEY terlebih dahulu di environment variable.\")\n",
+    "        return\n",
     "\n",
     "    try:\n",
     "        # Inisialisasi chatbot\n",
